<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:background="@color/white"
    tools:context=".MainActivity">


    <include
        layout="@layout/layout_header"
        android:id="@+id/mainHeader"/>

    <ImageView
        android:id="@+id/main_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:src="@drawable/main_image"
        android:layout_margin="10dp"
        android:contentDescription="@string/main_image_description"
        app:layout_constraintTop_toBottomOf="@id/mainHeader"
        app:layout_constraintBottom_toTopOf="@id/mainButtons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/mainButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_image">

        <Button
            android:id="@+id/buttonCardList"
            android:layout_width="320dp"
            android:layout_height="70dp"
            android:text="@string/card_list"
            android:textSize="22sp" />

        <Button
            android:id="@+id/buttonCardStatistics"
            android:layout_width="320dp"
            android:layout_height="70dp"
            android:layout_marginTop="16dp"
            android:text="@string/card_statistics"
            android:textSize="22sp" />

    </LinearLayout>

    <include
        android:id="@+id/footer"
        layout="@layout/layout_footer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>